fixed line spacing

--- a/css/style.css
+++ b/css/style.css
@@ -137,7 +137,7 @@ header {
 
 .header-content {
   font-family: var(--ff-lora);
-  letter-spacing: 0.5rem;
+  letter-spacing: 0.1rem;
   color: whitesmoke;
   text-align: center;
   z-index: 1;
